css/main.css
/***********/
/* General */
/***********/
body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body::after {
    content: "";
    background: url("../assets/images/numberpile.jpg");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    opacity: 0.25;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
    z-index: -1;   
  }

.navbar {
    background-color: #3e6c85;
}

#navbar-app-title {
    font-size: 14px;
    color: white;
    padding-top: 4px;
}

.navbar-nav > li > a, .navbar-brand {
    padding-top:4px !important; 
    padding-bottom:0 !important;
    height: 28px;
}

.navbar-inverse .navbar-nav>.active>a {
    background-color: #0B3952;
}

.navbar {min-height:28px !important;}

.jumbotron {
    margin-top: 10%;
    text-align: center;
    background-color: #3e6c85;
    color: white;
}

#home-page .jumbotron p {
    font-weight: bold;
}

#about-page .jumbotron p {
    text-align: left;
    font-weight: 400;
}

/****************/
/* numbers.html */
/****************/
#main-content {
    margin-top: 50px;
    text-align: center;
}

#numbers-container {
    display: inline-block;
    visibility: hidden;
}

#copy-list-button {
    float: left;
    width: 80px;
    height: 20px;
    padding: 0px;
    margin-top: 3px;
    margin-left: 10px;
}

#numbers-title {
    color: white;
    background-color: #3e6c85;
    font-size: 18px;
}

#shuffle-numbers-button {
    float: right;
    width: 80px;
    height: 20px;
    padding: 0px;
    margin-top: 3px;
    margin-right: 10px;
}

#random-numbers-table {
    padding-top: 1px;
    text-align: center;
    display: inline-block;
}

#number-list {
    text-align: center;
}

.table-row {
    text-align: left;
}

td{
    display: inline-block;
    width: 50px;
    border:1px solid black;
    margin: 1px;
    font-weight: bold;
    text-align: center;
}

.odd > td	{ background-color:#eee; }
.even > td	{ background-color: #bbb; }

/**************/
/* About page */
/**************/
#about-page h2 {
    text-align: left;
}

.quote {
    font-style: italic;
}

/*******************/
/* Loading spinner */
/*******************/
.center {
    margin: auto;
} 

#loading-spinner {
    font-size: 32px;
    width: 178px;
    margin-top: 10%;
    color: #3e6c85;
}

.glyphicon-refresh-animate {
    -animation: spin .7s infinite linear;
    -webkit-animation: spin2 .7s infinite linear;
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

/**********/
/* Mobile */
/**********/
@media all and (max-width: 767px) {
    #numbers-container {
        margin-top: 28px;
    }
    #navbar-app-title {
        padding-left: 22px;
        padding-top: 14px;
        font-size: 16px;
    }
}

@media all and (max-width: 550px) {
    #copy-list-button,
    #shuffle-numbers-button {
        position: absolute;
        top: 50px;
        background-color: #3e6c85;
        color: white;
    }
    #copy-list-button {
        left: 20px;
    }
    #shuffle-numbers-button {
        right: 20px;
    }
    #numbers-title span {
        margin-left: 0px;
    }
}

